# naga

./: Cargo.toml  commits.md
.github/workflows/: validation-linux.yml  validation-macos.yml  validation-windows.yml
src/: arena.rs
src/back/glsl/: mod.rs
src/back/hlsl/: conv.rs  writer.rs
src/back/msl/: writer.rs
src/proc/: layouter.rs  mod.rs  typifier.rs
src/valid/: analyzer.rs  compose.rs  expression.rs  function.rs  handles.rs  interface.rs  mod.rs  type.rs
tests/: snapshots.rs
tests/in/: operators.wgsl
xtask/: Cargo.toml
xtask/hlsl-snapshots/: Cargo.toml
xtask/hlsl-snapshots/src/: lib.rs
xtask/src/: cli.rs  glob.rs  main.rs  result.rs
